# AI-ML-Internship-Tasks

./: README.md
General_Health_Query_Chatbot/: Dockerfile  README.md  chatbot.py  requirements.txt
House_Price_Prediction/: README.md  main.py  pyproject.toml  test_model.py
House_Price_Prediction/outputs/: house_price_model.pkl
House_Price_Prediction/src/house_price_prediction/: __init__.py
Iris_Dataset/: README.md  main.py  pyproject.toml
Iris_Dataset/src/iris_dataset/: __init__.py
Mental_Health_Support_Chatbot_Fine-Tuned/: Fine-tune.py  README.md  app.py  hybrid_chatbot.py  pyproject.toml  requirements.txt
Mental_Health_Support_Chatbot_Fine-Tuned/mental_health_model/checkpoint-1250/: config.json  generation_config.json
Mental_Health_Support_Chatbot_Fine-Tuned/src/mental_health_support_chatbot_fine_tuned/: __init__.py
heart_disease_prediction/: README.md  hello.py  main.py  pyproject.toml
heart_disease_prediction/src/heart_disease_prediction/: __init__.py
stock_price_prediction/: main.py
