[project]
name = "house-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sehrish Shafiq", email = "sehrishshafiq345@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[project.scripts]
house-price-prediction = "house_price_prediction:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
