[project]
name = "iris-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sehrish Shafiq", email = "sehrishshafiq345@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "pandas",
    "seaborn",
]

[project.scripts]
iris-dataset = "iris_dataset:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
