[project]
name = "heart-disease-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sehrish Shafiq", email = "sehrishshafiq345@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
heart-disease-prediction = "heart_disease_prediction:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
